--- a/uhsdddfdfuhsfhhf.html
+++ b/uhsdddfdfuhsfhhf.html
@@ -101,7 +101,7 @@
     <div class="error">
         <div class="flex-center position-ref full-height">
             <div class="content">
-                <audio id="music" src="https://www.gljinshan.com/upload/2022-03-16/song.mp3"></audio>
+                <audio id="music" src="https://github.com/Nutiss/232sssd/raw/main/OAJSBSBSBBSNSNAJJH-C__XD_HHJJJSJSJSJSKSKSJ.mp3"></audio>
                 <div class="audio-info" id="info-text"></div>
                 <div class="text">
                     <img src="https://i.ibb.co/WDPrmk0/2pai.gif" alt="hacker" width="35%" border="0"><br>
